2005-03-12  Inge Wallin  <inge@lysator.liu.se>

	Clean up the data editor and remove old cruft.
	* kchartDataEditor.{h,cc}: Remove all #if 0:ed code.
	* Makefile.am (libkchartpart_la_SOURCES): Removed parser.cc,
	sheet.cc, sheetdlg.cc, table.cc qttableview.cpp
	(noinst_HEADERS): Removed parser.h sheet.h sheetdlg.h table.h
	qttableview.h 
	Files mentioned above: Removed.

2005-03-11  Inge Wallin  <inge@lysator.liu.se>

	Move Tooltips and Whatsthis help from the old data editor to the
	new one.
	* kchartDataEditor.cc (addDocs): New method
	(constructor): Clean up by moving all help generation to addDocs().

	----------------------------------------------------------------

	Enable "Finish" button for all pages in the wizard.
	* kchartWizard.cc (KChartWizard): Enable Finish button for
	"Subtypes" and "Labels & Legend" pages.

2005-03-10  Inge Wallin  <inge@lysator.liu.se>

	Make the table in the data editor shrink when number of rows/cols
	are decreased in the spinboxes.
	* kchartDataEditor.cc (askUserForConfirmation): new static
	function.
	(setRows, setCols): Handle shrinking

2005-03-09  Inge Wallin  <inge@lysator.liu.se>

	Make the table in the data editor grow when number of rows/cols
	are increased in the spinboxes.
	* kchartDataEditor.{h,cc} (setRows, setCols): new methods
	(constructor): connect spinboxes with new methods.
	
	Sanity checks:
	kchartDataEditor (constructor): make spinboxes have a min value of 1.

	----------------------------------------------------------------

	Make apply button in the data editor work.
	* kchartDataEditor.{h,cc} (applyClicked): new signal
	(slotApply): emit applyClicked with a parameter.
	* kchart_view.{h,cc} (applyEdit): new slot
	(edit): connect signal in data editor with slot in view.
	(applyEdit): new slot.
	
	----------------------------------------------------------------

	Cleaning
	* kchart_part.cc (paintContent): break out common code out of an
	if/else construction.
	